feat: finish add category feature with new flow
