# src/routes/CategoryRoutes.ts
@@ -1,19 +1,35 @@
 import { Router } from 'express';
 import { container } from 'tsyringe';
-import { TagController } from '../controllers/CategoryController';
 import { validationHandler } from '../middlewares/ValidationHandler';
 import {
   addCategorySchema,
   removeCategorySchema,
   storyIdParamSchema,
 } from '../schemas/CategorySchema';
+import { CategoryController } from '../controllers/CategoryController';
+import { AuthenticationMiddleWare } from '../middlewares/AuthenticationHandler';
 
 const router = Router();
-const tagController = container.resolve(TagController);
+const categoryController = container.resolve(CategoryController);
+const authenticationMiddleWare = container.resolve(AuthenticationMiddleWare);
+
+// GET /api/stories/:storyId/categories
+router.get(
+  '/stories/:storyId/categories',
+  authenticationMiddleWare.authenticateJWTHandler,
+  validationHandler(storyIdParamSchema, { source: 'params' }),
+  // #swagger.tags = ['Categories']
+  // #swagger.summary = 'Get all tags for a story'
+  // #swagger.parameters['storyId'] = { description: 'Story ID', in: 'path', required: true, type: 'string' }
+  // #swagger.responses[200] = { description: 'List of tags for the story', schema: { $ref: '#/definitions/CategoryResponseDTO' } }
+  /* #swagger.security = [{ "bearerAuth": [] }] */
+  categoryController.list.bind(categoryController),
+);
 
 // POST /api/stories/:storyId/categories
 router.post(
   '/stories/:storyId/categories',
+  authenticationMiddleWare.authenticateJWTHandler,
   validationHandler(storyIdParamSchema, { source: 'params' }),
   validationHandler(addCategorySchema),
   // #swagger.tags = ['Categories']
@@ -22,11 +38,12 @@ router.post(
   // #swagger.parameters['body'] = { description: 'Tag to add', in: 'body', required: true, schema: { $ref: '#/definitions/AddCategoryDTO' } }
   // #swagger.responses[200] = { description: 'Tag added successfully' }
   /* #swagger.security = [{ "bearerAuth": [] }] */
-  tagController.addCategoryToStory.bind(tagController),
+  categoryController.addCategoryToStory.bind(categoryController),
 );
 // DELETE /api/stories/:storyId/categories
 router.delete(
   '/stories/:storyId/categories',
+  authenticationMiddleWare.authenticateJWTHandler,
   validationHandler(storyIdParamSchema, { source: 'params' }),
   validationHandler(removeCategorySchema),
   // #swagger.tags = ['Categories']
@@ -35,19 +52,7 @@ router.delete(
   // #swagger.parameters['body'] = { description: 'Tag to remove', in: 'body', required: true, schema: { $ref: '#/definitions/RemoveCategoryDTO' } }
   // #swagger.responses[200] = { description: 'Tag removed successfully' }
   /* #swagger.security = [{ "bearerAuth": [] }] */
-  tagController.removeTag.bind(tagController),
-);
-
-// GET /api/stories/:storyId/categories
-router.get(
-  '/stories/:storyId/categories',
-  validationHandler(storyIdParamSchema, { source: 'params' }),
-  // #swagger.tags = ['Categories']
-  // #swagger.summary = 'Get all tags for a story'
-  // #swagger.parameters['storyId'] = { description: 'Story ID', in: 'path', required: true, type: 'string' }
-  // #swagger.responses[200] = { description: 'List of tags for the story', schema: { $ref: '#/definitions/CategoryResponseDTO' } }
-  /* #swagger.security = [{ "bearerAuth": [] }] */
-  tagController.list.bind(tagController),
+  categoryController.removeTag.bind(categoryController),
 );
 
 export default router;
